--- a/src/css/map.css
+++ b/src/css/map.css
@@ -16,6 +16,18 @@
   padding: 20px;
 }
 
+.leaflet-routing-container {
+  height: 250px;
+  width: 200px;
+  overflow: hidden;
+  border-radius: 20px;
+  border: none;
+}
+
+.leaflet-routing-container:first-of-type {
+  display: none;
+}
+
 a.leaflet-control-zoom-in,
 a.leaflet-control-zoom-out,
 a.leaflet-control-zoom-in.leaflet-disabled,
