--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,6 +1,7 @@
 @import-normalize;
 @import 'map.css';
 @import 'button.css';
+@import 'mapList.css';
 
 *,
 *::before,
@@ -15,9 +16,4 @@ body {
 }
 html {
   font-size: 20px;
-}
-
-.savedMapDiv:hover {
-  background: rgba(215, 215, 215, 0.5);
-  cursor: pointer;
 }
