--- a/src/css/mapList.css
+++ b/src/css/mapList.css
@@ -1,18 +1,34 @@
+.savedMapDiv {
+  box-shadow: 2px 2px 4px rgba(0,0,0,.2);
+  border-radius: 5px;
+  cursor: pointer;
+  /* width: 80%; */
+  text-align: left;
+  margin: 1rem;
+  padding: 5px;
+  /* overflow: hidden; */
+}
 .savedMapDiv:hover {
   background: rgba(215, 215, 215, 0.5);
   cursor: pointer;
-  width: 85vw;
+  /* width: 85vw; */
 }
-
-.savedMapDiv {
-  cursor: pointer;
-  width: 80%;
-  text-align: left;
-  /* overflow: hidden; */
-}
-
 .map-el {
-  margin: 0 5px;
+  /* margin: 5px; */
   overflow-y: hidden;
-  white-space: nowrap;
+  /* white-space: nowrap; */
+}
+.description {
+
+}
+p {
+  margin-bottom: 0 !important;
+}
+.list-container {
+  display: flex;
+}
+.listItem {
+  display: flex;
+  flex-direction: column;
+
 }
