CSS changes to make map fullscreen and form in the top left corner

--- a/src/css/form.css
+++ b/src/css/form.css
@@ -4,3 +4,19 @@
 .main-container {
   padding: 2rem;
 }
+
+.main-form {
+  opacity: 1;
+  border-style: ridge;
+  /* z-index: 1000; */
+
+  display: block;
+  width: 600px;
+  height: 100%;
+  max-width: 100%;
+  float: left;
+}
+
+#userWelcome {
+  text-align: center;
+}
