--- a/src/css/map.css
+++ b/src/css/map.css
@@ -1,4 +1,4 @@
-.leaflet-container {
+/* .leaflet-container {
   margin: auto;
   width: 90%;
   height: 60vh;
@@ -6,6 +6,21 @@
   border: none;
   margin: 20px;
   box-shadow: 0 0 10px 10px rgba(200, 200, 200, 0.4);
+} */
+
+.leaflet-container {
+  position: fixed;
+  padding: 0;
+  margin: 0;
+
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.5);
+
+  opacity: 0.5;
 }
 
 .leaflet-control-attribution {
