Allows form to overlay map

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,15 +1,15 @@
 @import-normalize;
-@import 'map.css';
-@import 'button.css';
-@import 'mapList.css';
-@import 'form.css';
-@import 'flash.css';
+@import "map.css";
+@import "button.css";
+@import "mapList.css";
+@import "form.css";
+@import "flash.css";
 
 *,
 *::before,
 *::after {
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
-    'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   box-sizing: border-box;
 }
 body {
@@ -19,3 +19,7 @@ body {
 html {
   font-size: 20px;
 }
+
+/* .navbar {
+  position: absolute;
+} */
