--- a/src/css/map.css
+++ b/src/css/map.css
@@ -20,7 +20,9 @@
   height: 100%;
   background: rgba(255, 255, 255, 0.5);
 
-  opacity: 0.5;
+  /* position: relative; */
+  z-index: -1;
+  /* opacity: 0.5; */
 }
 
 .leaflet-control-attribution {
