--- a/src/css/form.css
+++ b/src/css/form.css
@@ -2,14 +2,14 @@
   margin-bottom: 0;
 }
 .main-container {
-  padding: 2rem;
+  position: relative;
 }
 
 .main-form {
   opacity: 1;
   border-style: ridge;
-  /* z-index: 1000; */
 
+  /* display: block; */
   display: block;
   width: 600px;
   height: 100%;
@@ -17,8 +17,16 @@
   float: left;
 
   background-color: white;
+  transform: scale(0.7, 0.7);
+  /* left: 100px; */
+  /* position: absolute; */
+  /* left: auto; */
 }
 
 #userWelcome {
   text-align: center;
+}
+
+#saveRouteID {
+  display: none;
 }
