--- a/src/css/form.css
+++ b/src/css/form.css
@@ -18,6 +18,7 @@
 
   background-color: white;
   transform: scale(0.7, 0.7);
+  transform-origin: top left;
   /* left: 100px; */
   /* position: absolute; */
   /* left: auto; */
