--- a/src/css/form.css
+++ b/src/css/form.css
@@ -9,18 +9,38 @@
   opacity: 1;
   border-style: ridge;
 
-  /* display: block; */
   display: block;
   width: 600px;
   height: 100%;
   max-width: 100%;
   float: left;
 
+  border-radius: 10px;
+
   background-color: white;
   transform: scale(0.7, 0.7);
   transform-origin: top left;
 
-  /* left: 100px; */
+  /* position: absolute; */
+  /* left: auto; */
+}
+
+.db-form {
+  opacity: 1;
+  border-style: ridge;
+
+  display: block;
+  width: 600px;
+  height: 100%;
+  max-width: 100%;
+  float: left;
+
+  border-radius: 10px;
+
+  background-color: white;
+  transform: scale(0.7, 0.7);
+  transform-origin: top left;
+
   /* position: absolute; */
   /* left: auto; */
 }
