--- a/src/css/map.css
+++ b/src/css/map.css
@@ -12,14 +12,13 @@
   position: fixed;
   padding: 0;
   margin: 0;
-
+  /* margin-top: 50px; */
   top: 0;
   left: 0;
-
   width: 100%;
   height: 100%;
+  /* height: 93.5vh; */
   background: rgba(255, 255, 255, 0.5);
-
   /* position: relative; */
   z-index: -1;
   /* opacity: 0.5; */
