Styling to flash messages

--- a/src/css/flash.css
+++ b/src/css/flash.css
@@ -1,7 +1,9 @@
 .flash {
   position: absolute;
-  margin-top: 20px;
+  /* margin-top: 20px; */
   margin-left: auto;
   margin-right: auto;
-  width: 80%;
+  width: 40%;
+  text-align: center;
+  padding: 0 15px 15px 15px;
 }
