--- a/src/css/form.css
+++ b/src/css/form.css
@@ -17,7 +17,7 @@
   background-color: #fcfcfc;
   transform: scale(0.7, 0.7);
   transform-origin: top left;
-  box-shadow: 0 1px 5px rgba(0,0,0,0.65);
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.65);
   padding: 1rem;
   /* position: absolute; */
   /* left: auto; */
@@ -67,5 +67,5 @@
 }
 .buttons:hover {
   background-color: #00b3b3 !important;
-    color: white !important;
+  color: white !important;
 }
