--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,17 +1,17 @@
 @import-normalize;
 
-@import "map.css";
-@import "button.css";
-@import "mapList.css";
-@import "form.css";
-@import "flash.css";
-@import "navBar.css";
+@import 'map.css';
+@import 'button.css';
+@import 'mapList.css';
+@import 'form.css';
+@import 'flash.css';
+@import 'navBar.css';
 
 *,
 *::before,
 *::after {
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
+    'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   box-sizing: border-box;
 }
 body {
@@ -20,14 +20,6 @@ body {
 }
 html {
   font-size: 20px;
-}
-
-.navbar {
-  /* position: absolute; */
-  height: 50px;
-  max-height: 50px;
-  top: 10%;
-  font-size: 15px;
 }
 
 /* .moveToRight {
