--- a/src/css/navBar.css
+++ b/src/css/navBar.css
@@ -1,7 +1,6 @@
 .main-logo.navbar-brand {
   font-size: 1.2em;
   cursor: pointer;
-  /* background-color: darkorange; */
 }
 
 .main-logo:hover {
@@ -21,13 +20,10 @@
   margin-right: 15px;
 }
 
-.form-group {
-  padding-top: 3%;
-}
-
-.form-control {
-  max-width: 160px;
-  max-height: 35px;
+.user-login-container {
+  display: flex;
+  align-items: center;
+  /* background-color: darkorange; */
 }
 
 .navbar-toggler {
@@ -36,19 +32,35 @@
 
 #exampleInputEmail1,
 #exampleInputPassword1 {
-  font-size: 0.8em;
+  max-width: 160px;
+  max-height: 35px;
+  height: calc(1.5em + 0.75rem + 2px);
+  padding: 0.375rem 0.75rem;
+  font-size: 0.75rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #495057;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
 }
 
 #my-routes {
-  margin-top: 7%;
-  margin-bottom: 7%;
   color: #ffff;
 }
 
 #logInButton,
 #logOutButton,
 #signUpButton {
-  margin: 1.45em 5px 0 5px;
+  background-color: #008080 !important;
+  border: none !important;
+  color: white !important;
   max-height: 30px;
   font-size: 0.6em;
+}
+
+#logInButton:hover,
+#logOutButton:hover,
+#signUpButton:hover {
+  background-color: #00b3b3 !important;
+  color: white !important;
 }
