Add styling to drop down element and generate button

--- a/src/css/button.css
+++ b/src/css/button.css
@@ -2,3 +2,10 @@
   margin: 5px;
   background-color: #008080;
 }
+
+#roundTripButton {
+  background-color: #dc2500 !important;
+  border: none !important;
+  color: white !important;
+  margin-bottom: 7px;
+}
