--- a/src/css/form.css
+++ b/src/css/form.css
@@ -46,8 +46,9 @@
   margin-bottom: 1rem;
 }
 
-#saveRoute {
-  /* display: none; */
+.form-control.dropDownList {
+  margin-bottom: 5px;
+  width: 270px;
 }
 #saveRouteID {
   display: flex;
@@ -57,9 +58,9 @@
   display: flex;
   align-items: flex-end;
 }
-#inputBox {
+/* #inputBox {
   margin-bottom: 5px;
-}
+} */
 .buttons {
   background-color: #008080 !important;
   border: none !important;
