--- a/src/css/flash.css
+++ b/src/css/flash.css
@@ -1,9 +1,10 @@
 .flash {
-  position: absolute;
+  /* position: relative; */
   /* margin-top: 20px; */
   margin-left: auto;
   margin-right: auto;
-  width: 40%;
+  /* max-height: 80px; */
+  max-width: 40%;
   text-align: center;
-  padding: 0 15px 15px 15px;
+  /* padding: 0 15px 15px 15px; */
 }
