--- a/src/css/mapList.css
+++ b/src/css/mapList.css
@@ -2,26 +2,21 @@
   box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
   border-radius: 5px;
   cursor: pointer;
-  /* width: 80%; */
   text-align: left;
   margin: 1rem;
-  padding: 8px;
-  /* overflow: hidden; */
+  padding: 10px;
   position: relative;
   background-color: #fcfcfc;
-    box-shadow: 0 1px 5px rgba(0,0,0,0.65);
-    transition: 0.3s;
+  box-shadow: 0 1px 5px rgba(0,0,0,0.65);
+  transition: 0.3s;
 }
 .savedMapDiv:hover {
   background: #f2f2f2;
   cursor: pointer;
   transform: scale(1.02)
-  /* width: 85vw; */
 }
 .map-el {
-  /* margin: 5px; */
   overflow-y: hidden;
-  /* white-space: nowrap; */
 }
 .description {
 }
@@ -39,19 +34,27 @@ p {
   max-height: 40px;
   min-width: auto;
   overflow: hidden;
-  /* width: 200px; */
 }
-.dustbin {
+.dustbin svg {
   position: absolute;
   right: 5px;
   bottom: 5px;
+  fill: #008080 !important;
+  opacity: 1;
 }
 .description {
   margin-bottom: 8px;
   font-weight: bolder;
+  color: #008080;
+}
+.description svg {
+  margin: 3px;
 }
 .underline {
   width: 100%;
   height: 1px;
-  background-color: grey;
+  background-color: #008080;
+}
+.close {
+  opacity: 1 !important;
 }
