--- a/src/css/form.css
+++ b/src/css/form.css
@@ -70,7 +70,7 @@
   background-color: #00b3b3 !important;
   color: white !important;
 }
-#location, #swap {
+#location, #swap, #save-icon {
   margin-right: 5px;
 }
 #roundTripMyLocation {
