Add linebreak between buttons

--- a/src/css/form.css
+++ b/src/css/form.css
@@ -1,5 +1,5 @@
 .form-group {
-  margin-bottom: 0;
+  margin-bottom: 0 !important;
 }
 /* .main-container {
   position: relative;
@@ -53,6 +53,7 @@
 #saveRouteID {
   display: flex;
   align-items: center;
+  margin-top: 20px;
 }
 #generateRoute {
   display: flex;
