Fix navBar css, able to stic to the top while scrolling down

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -6,8 +6,8 @@
 @import 'flash.css';
 @import 'navBar.css';
 @import 'logo.css';
-
-*,
+@import 'smallScreenDevices.css';
+*/ *,
 *::before,
 *::after {
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
