CSS for mobile devices

--- a/src/css/form.css
+++ b/src/css/form.css
@@ -5,8 +5,8 @@
   opacity: 1;
   width: 600px;
   height: 100%;
-  max-width: 100%;
-  float: left;
+  /* max-width: 100%; */
+  /* float: left; */
   border-radius: 0 0 10px 0;
   background-color: #fcfcfc;
   transform: scale(0.7, 0.7);
@@ -19,15 +19,15 @@
   width: 450px;
   height: 100%;
   max-width: 100%;
-  float: left;
+  /* float: left; */
   border-radius: 10px;
   background-color: transparent;
   transform: scale(0.7, 0.7);
   transform-origin: top left;
 }
-.form-control {
+/* .form-control {
   margin-bottom: 5px;
-}
+} */
 .form-control.dropDownList {
   margin-bottom: 5px;
   width: 270px;
